--- a/luigi.cfg
+++ b/luigi.cfg
@@ -4,12 +4,12 @@ picard=/nfs/goldstein/software/picard-tools-2.2.1/picard.jar
 reference_file=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
 seqdict_file=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.dict
 bed_file=/home/rp2801/test_folder/coverage_statistics/ccds_r14.bed
-bam_file="bam_location"
-target_file="target_file"
+target_file=/home/rp2801/test_folder/coverage_statistics/CCDS.genes.unique.regions.list
 create_targetfile=True
-seq_type="Genome"
-bait_file="bait_file"
-sample="sample_name"
-wgsinterval=True
+bait_file=/home/rp2801/test_folder/coverage_statistics/SeqCap_EZ_Exome_v3_capture.list
+wgsinterval=False
 scratch=./
 output_dir=./
+bam_file=/nfs/seqscratch11/filtered.Schiz6113363.production.bam
+sample=Schiz6113363
+seq_type=Exome
