Commented out variables that aren't defined.

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -15,23 +15,23 @@ recal_table=%(scratch)s/%(sample_name)s.recal_data.table
 #BAMs
 bam=%(base_directory)s/%(sample_name)s/%(sample_name)s.bam
 realn_bam=%(base_directory)s/%(sample_name)s/%(sample_name)s.realn.bam
-realn_recal_bam
+#realn_recal_bam
 
 #VQSR
 vcf=%(scratch)s/%(sample_name)s.raw_vcf
 snp_vcf=%(scratch)s/%(sample_name)s.snp_vcf
-snp_recal
-snp_tranches
-snp_rscript
-snp_filtered
+#snp_recal
+#snp_tranches
+#snp_rscript
+#snp_filtered
 
 indel_vcf=%(scratch)s/%(sample_name)s.indel_vcf
-indel_rscript
-indel_recal
-indel_tranches
-indel_rscript
-indel_filtered
-indel_filter_matched
+#indel_rscript
+#indel_recal
+#indel_tranches
+#indel_rscript
+#indel_filtered
+#indel_filter_matched
 
 #resources
 hapman=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/hapmap_3.3.b37.vcf 
