Added new parameters

--- a/luigi.cfg
+++ b/luigi.cfg
@@ -5,11 +5,18 @@ reference_file=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
 seqdict_file=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.dict
 bed_file=/home/rp2801/test_folder/coverage_statistics/ccds_r14.bed
 target_file=/home/rp2801/test_folder/coverage_statistics/CCDS.genes.unique.regions.list
-create_targetfile=True
+create_targetfile=False
 bait_file=/home/rp2801/test_folder/coverage_statistics/SeqCap_EZ_Exome_v3_capture.list
 wgsinterval=False
 scratch=./
 output_dir=./
 bam_file=/nfs/seqscratch11/filtered.Schiz6113363.production.bam
 sample=Schiz6113363
-seq_type=Exome
+seq_type=Genome
+python_path=/nfs/goldstein/software/python2.7.7/bin/python2.7
+relatedness_refs=/nfs/goldstein/goldsteinlab/Bioinformatics/scripts/refs
+sampleped_loc=/home/rp2801/git/bioinfo_pipe/Python/sampleped_fixed.py
+relatedness_markers=/nfs/seqscratch09/RELATEDNESS_QC/test.map
+bedtools_loc=/nfs/goldstein/software/bedtools-2.25.0/bin/bedtools
+pypy_loc=/nfs/goldstein/software/pypy-4.0.1-linux_x86_64-portable/bin/pypy
+coverage_binner_loc=
