Added more parameters

--- a/luigi.cfg
+++ b/luigi.cfg
@@ -8,7 +8,7 @@ target_file=/home/rp2801/test_folder/coverage_statistics/CCDS.genes.unique.regio
 create_targetfile=False
 bait_file=/home/rp2801/test_folder/coverage_statistics/SeqCap_EZ_Exome_v3_capture.list
 wgsinterval=False
-scratch=./
+scratch=/nfs/seqscratch11/rp2801/
 output_dir=./
 bam_file=/nfs/seqscratch11/filtered.Schiz6113363.production.bam
 sample=Schiz6113363
@@ -19,4 +19,4 @@ sampleped_loc=/home/rp2801/git/bioinfo_pipe/Python/sampleped_fixed.py
 relatedness_markers=/nfs/seqscratch09/RELATEDNESS_QC/test.map
 bedtools_loc=/nfs/goldstein/software/bedtools-2.25.0/bin/bedtools
 pypy_loc=/nfs/goldstein/software/pypy-4.0.1-linux_x86_64-portable/bin/pypy
-coverage_binner_loc=
+coverage_binner_loc=/home/rp2801/git/dragen_pipe/dragen_coverage_binner.py
