--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -21,3 +21,4 @@ bedtools_loc=/nfs/goldstein/software/bedtools-2.25.0/bin/bedtools
 pypy_loc=/nfs/goldstein/software/pypy-4.0.1-linux_x86_64-portable/bin/pypy
 coverage_binner_loc=/home/rp2801/git/dragen_pipe/dragen_coverage_binner.py
 dbsnp=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/dbsnp_138.b37.vcf
+cnf_file=/nfs/goldstein/software/dragen/.my.cnf
