--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -3,15 +3,14 @@ java=/nfs/goldstein/software/jdk1.8.0_05/bin/java
 picard=/nfs/goldstein/software/picard-tools-2.2.1/picard.jar
 ref=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
 seqdict_file=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.dict
-bed_file=/home/rp2801/test_folder/coverage_statistics/ccds_r14.bed
-target_file=/home/rp2801/test_folder/coverage_statistics/CCDS.genes.unique.regions.list
+bed_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/ccds_r14.bed
+target_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/CCDS.genes.unique.regions.list
 create_targetfile=False
-bait_file=/home/rp2801/test_folder/coverage_statistics/SeqCap_EZ_Exome_v3_capture.list
-wgsinterval=False
-scratch=/nfs/seqscratch11/rp2801/
+bait_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/SeqCap_EZ_Exome_v3_capture.list
+bait_file_X=/nfs/seqscratch11/rp2801/backup/coverage_statistics/SeqCap_EZ_Exome_v3_capture_X.list
+bait_file_Y=/nfs/seqscratch11/rp2801/backup/coverage_statistics/SeqCap_EZ_Exome_v3_capture_Y.list
+scratch=/nfs/seqscratch11/rp2801
 output_dir=./
-bam=/nfs/seqscratch11/filtered.Schiz6113363.production.bam
-sample_name=Schiz6113363
 seq_type=Genome
 python_path=/nfs/goldstein/software/python2.7.7/bin/python2.7
 relatedness_refs=/nfs/goldstein/goldsteinlab/Bioinformatics/scripts/refs
@@ -19,6 +18,7 @@ sampleped_loc=/home/rp2801/git/bioinfo_pipe/Python/sampleped_fixed.py
 relatedness_markers=/nfs/seqscratch09/RELATEDNESS_QC/test.map
 bedtools_loc=/nfs/goldstein/software/bedtools-2.25.0/bin/bedtools
 pypy_loc=/nfs/goldstein/software/pypy-4.0.1-linux_x86_64-portable/bin/pypy
-coverage_binner_loc=/home/rp2801/git/dragen_pipe/dragen_coverage_binner.py
+coverage_binner_loc=/home/rp2801/git/dragen_pipe/dragen/python/dragen_coverage_binner.py
 dbsnp=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/dbsnp_138.b37.vcf
 cnf_file=/nfs/goldstein/software/dragen/.my.cnf
+max_mem=24
