Added information about the database config file and the set of chromosomes to the config file.

--- a/annodb/src/anno.cnf
+++ b/annodb/src/anno.cnf
@@ -1,5 +1,6 @@
 [ref]
 genome=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
+CHROMs=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,X,Y,MT
 
 [annotate]
 java=/nfs/goldstein/software/jdk1.8.0_05/bin/java
@@ -8,3 +9,7 @@ genome_version=GRCh37.74
 snpeff_cfg=/nfs/goldstein/software/snpEff/4.1/snpEff.config
 snpeff_options=-v -noMotif -noNextProt -noLog -nodownload -noStats
 intervals=/nfs/goldstein/goldsteinlab/software/snpEff_3_3/data/GRCh37.73/intron_exon_boundaries.unique.custom_interval.bed
+
+[db]
+cnf=/nfs/goldstein/software/dragen/db.cnf
+group=dragen
