--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -40,3 +40,7 @@ omni=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_omni2.5.b37.
 Mills1000g=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/Mills_and_1000G_gold_standard.indels.b37.vcf
 dbSNP=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/dbsnp_138.b37.vcf
 
+[db]
+cnf=/nfs/goldstein/software/dragen/db.cnf
+seqdb_group=seqdb
+dragen_group=dragen
