Minor changes before merging to gatk pipe..

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -17,8 +17,10 @@ relatedness_refs=/nfs/goldstein/goldsteinlab/Bioinformatics/scripts/refs
 sampleped_loc=/home/rp2801/git/bioinfo_pipe/Python/sampleped_fixed.py
 relatedness_markers=/nfs/seqscratch09/RELATEDNESS_QC/test.map
 bedtools_loc=/nfs/goldstein/software/bedtools-2.25.0/bin/bedtools
-pypy_loc=/nfs/goldstein/software/pypy-4.0.1-linux_x86_64-portable/bin/pypy
+pypy_loc=/nfs/goldstein/software/pypy-2.2.1-linux_x86_64-portable/bin/pypy
 coverage_binner_loc=/home/rp2801/git/dragen_pipe/dragen/python/dragen_coverage_binner.py
+binner_loc=/home/rp2801/git/dragen_pipe/dragen/python/combined_binning.py
 dbsnp=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/dbsnp_138.b37.vcf
 cnf_file=/nfs/goldstein/software/dragen/.my.cnf
 max_mem=24
+
