--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -19,7 +19,7 @@ binner_loc=/home/rp2801/git/dragen_pipe/dragen/python/combined_binning.py
 dbsnp=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/dbsnp_138.b37.vcf
 cnf_file=/nfs/goldstein/software/dragen/.my.cnf
 max_mem=24
-
+block_size=10000
 
 [db]
 cnf=/nfs/goldstein/software/dragen/db.cnf
