updated from raghavs config

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -1,24 +1,43 @@
 [config]
+
+#programs
+bedtools_loc=/nfs/goldstein/software/bedtools-2.25.0/bin/bedtools
+coverage_binner_loc=/home/rp2801/git/dragen_pipe/dragen/python/dragen_coverage_binner.py
+gatk=/nfs/goldstein/software/GATK-3.6.0-nightly-2016-08-10-g9a77889/
 java=/nfs/goldstein/software/jdk1.8.0_05/bin/java
+pypy_loc=/nfs/goldstein/software/pypy-4.0.1-linux_x86_64-portable/bin/pypy
 picard=/nfs/goldstein/software/picard-tools-2.2.1/picard.jar
-ref=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
-seqdict_file=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.dict
-bed_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/ccds_r14.bed
-target_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/CCDS.genes.unique.regions.list
-create_targetfile=False
+python_path=/nfs/goldstein/software/python2.7.7/bin/python2.7
+
+#locations
+scratch=/nfs/seqscratch09/tmp/luigi_test
+output_dir=./
+
+#files
 bait_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/SeqCap_EZ_Exome_v3_capture.list
 bait_file_X=/nfs/seqscratch11/rp2801/backup/coverage_statistics/SeqCap_EZ_Exome_v3_capture_X.list
 bait_file_Y=/nfs/seqscratch11/rp2801/backup/coverage_statistics/SeqCap_EZ_Exome_v3_capture_Y.list
-scratch=/nfs/seqscratch11/rp2801
-output_dir=./
-seq_type=Genome
-python_path=/nfs/goldstein/software/python2.7.7/bin/python2.7
+ccds_bed_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/ccds_r14.bed
 relatedness_refs=/nfs/goldstein/goldsteinlab/Bioinformatics/scripts/refs
-sampleped_loc=/home/rp2801/git/bioinfo_pipe/Python/sampleped_fixed.py
 relatedness_markers=/nfs/seqscratch09/RELATEDNESS_QC/test.map
-bedtools_loc=/nfs/goldstein/software/bedtools-2.25.0/bin/bedtools
-pypy_loc=/nfs/goldstein/software/pypy-4.0.1-linux_x86_64-portable/bin/pypy
-coverage_binner_loc=/home/rp2801/git/dragen_pipe/dragen/python/dragen_coverage_binner.py
-dbsnp=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/dbsnp_138.b37.vcf
-cnf_file=/nfs/goldstein/software/dragen/.my.cnf
+sampleped_loc=/home/rp2801/git/bioinfo_pipe/Python/sampleped_fixed.py
+target_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/CCDS.genes.unique.regions.list
+
+#gatk resources
+1000g=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_phase1.indels.b37.vcf 
+dbSNP=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/dbsnp_138.b37.vcf
+hapman=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/hapmap_3.3.b37.vcf 
+Mills1000g=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/Mills_and_1000G_gold_standard.indels.b37.vcf
+omni=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_omni2.5.b37.vcf 
+ref=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
+seqdict_file=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.dict
+
+#variables
+create_targetfile=False
 max_mem=24
+
+[db]
+cnf=/nfs/goldstein/software/dragen/db.cnf
+cnf_file=/nfs/goldstein/software/dragen/.my.cnf
+seqdb_group=seqdb
+dragen_group=dragen
