--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -4,7 +4,7 @@
 bedtools=/nfs/goldstein/software/bedtools-2.25.0/bin/bedtools
 bgzip=/nfs/goldstein/software/bin/bgzip
 coverage_binner_loc=/home/rp2801/git/dragen_pipe/dragen/python/dragen_coverage_binner.py
-gatk=/nfs/goldstein/software/GATK-3.6.0-nightly-2016-08-10-g9a77889/
+gatk=/nfs/goldstein/software/GATK-3.6.0-nightly-2016-08-10-g9a77889/GenomeAnalysisTK.jar
 java=/nfs/goldstein/software/jdk1.8.0_05/bin/java
 picard=/nfs/goldstein/software/picard-tools-2.2.1/picard.jar
 pypy_loc=/nfs/goldstein/software/pypy-4.0.1-linux_x86_64-portable/bin/pypy
@@ -24,12 +24,14 @@ ccds_bed_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/ccds_r14.bed
 relatedness_refs=/nfs/goldstein/goldsteinlab/Bioinformatics/scripts/refs
 relatedness_markers=/nfs/seqscratch09/RELATEDNESS_QC/test.map
 sampleped_loc=/home/rp2801/git/bioinfo_pipe/Python/sampleped_fixed.py
+snpEff_cfg=/nfs/goldstein/software/snpEff/4.1/snpEff.config
+snpEff_interval=/nfs/goldstein/goldsteinlab/software/snpEff_3_3/data/GRCh37.73/intron_exon_boundaries.unique.custom_interval.bed
 target_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/CCDS.genes.unique.regions.list
 
 #gatk resources
 g1000=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_phase1.indels.b37.vcf 
 dbSNP=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/dbsnp_138.b37.vcf
-hapman=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/hapmap_3.3.b37.vcf 
+hapmap=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/hapmap_3.3.b37.vcf 
 Mills1000g=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/Mills_and_1000G_gold_standard.indels.b37.vcf
 omni=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_omni2.5.b37.vcf 
 ref=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
@@ -39,7 +41,7 @@ interval=/nfs/goldstein/software/dragen_pipe/dragen/conf/hs37d5.intervals
 #variables
 create_targetfile=False
 max_mem=24
-block_size=1000
+block_size=10000
 
 [db]
 cnf=/nfs/goldstein/software/dragen/db.cnf
