Big commit..Added more tasks, tasks are now logged in db, pipeline steps are logged as well, added additional functions to take care of these. Made other multiple small changes and added josh's code as is from the latest commit on dragen_pipe. Needs testing

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -19,6 +19,7 @@ scratch=/nfs/qumulo/ALIGNMENT/BUILD37/DRAGEN
 bait_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/SeqCap_EZ_Exome_v3_capture.list
 bait_file_X=/nfs/seqscratch11/rp2801/backup/coverage_statistics/SeqCap_EZ_Exome_v3_capture_X.list
 bait_file_Y=/nfs/seqscratch11/rp2801/backup/coverage_statistics/SeqCap_EZ_Exome_v3_capture_Y.list
+bait_bed_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/SeqCap_EZ_Exome_v3_capture.bed
 ccds_bed_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/ccds_r14.bed
 relatedness_refs=/nfs/goldstein/goldsteinlab/Bioinformatics/scripts/refs
 relatedness_markers=/nfs/seqscratch09/RELATEDNESS_QC/test.map
@@ -31,6 +32,9 @@ sampleped_loc=/home/rp2801/git/bioinfo_pipe/Python/sampleped_fixed.py
 snpEff_cfg=/nfs/goldstein/software/snpEff/4.1/snpEff.config
 snpEff_interval=/nfs/goldstein/goldsteinlab/software/snpEff_3_3/data/GRCh37.73/intron_exon_boundaries.unique.custom_interval.bed
 target_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/CCDS.genes.unique.regions.list
+target_file_X=/nfs/seqscratch11/rp2801/backup/coverage_statistics/X.list
+target_file_Y=/nfs/seqscratch11/rp2801/backup/coverage_statistics/Y.list
+transpose_awk=/nfs/rp2801/git/dragen_pipe/dragen/python/transpose.awk
 
 #gatk resources
 g1000=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_phase1.indels.b37.vcf 
