Cleaned config file, added database field names for qc metrics

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -6,14 +6,15 @@ coverage_binner_loc=/home/rp2801/git/dragen_pipe/dragen/python/dragen_coverage_b
 gatk=/nfs/goldstein/software/GATK-3.6.0-nightly-2016-08-10-g9a77889/GenomeAnalysisTK.jar
 java=/nfs/goldstein/software/jdk1.8.0_05/bin/java
 picard=/nfs/goldstein/software/picard-tools-2.2.1/picard.jar
-pypy_loc=/nfs/goldstein/software/pypy-4.0.1-linux_x86_64-portable/bin/pypy
-python_path=/nfs/goldstein/software/python2.7.7/bin/python2.7
+pypy=/nfs/goldstein/software/pypy-2.2.1-linux_x86_64-portable/bin/pypy
 snpEff=/nfs/goldstein/software/snpEff/4.1/snpEff.jar
 tabix=/nfs/goldstein/software/bin/tabix
+verifybamid=/nfs/goldstein/software/bin/verifyBamID.20120620
 
 #locations
 base_dir=/nfs/fastq16/ALIGNMENT/BUILD37/DRAGEN
 scratch=/nfs/qumulo/ALIGNMENT/BUILD37/DRAGEN
+python_path=/nfs/goldstein/software/python2.7.7/bin/python2.7
 
 #files
 bait_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/SeqCap_EZ_Exome_v3_capture.list
@@ -23,18 +24,14 @@ bait_bed_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/SeqCap_EZ_Exom
 ccds_bed_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/ccds_r14.bed
 relatedness_refs=/nfs/goldstein/goldsteinlab/Bioinformatics/scripts/refs
 relatedness_markers=/nfs/seqscratch09/RELATEDNESS_QC/test.map
-bedtools_loc=/nfs/goldstein/software/bedtools-2.25.0/bin/bedtools
-pypy_loc=/nfs/goldstein/software/pypy-2.2.1-linux_x86_64-portable/bin/pypy
 binner_loc=/home/rp2801/git/dragen_pipe/dragen/python/combined_binning.py
-dbsnp=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/dbsnp_138.b37.vcf
-cnf_file=/nfs/goldstein/software/dragen/.my.cnf
 sampleped_loc=/home/rp2801/git/bioinfo_pipe/Python/sampleped_fixed.py
 snpEff_cfg=/nfs/goldstein/software/snpEff/4.1/snpEff.config
 snpEff_interval=/nfs/goldstein/goldsteinlab/software/snpEff_3_3/data/GRCh37.73/intron_exon_boundaries.unique.custom_interval.bed
 target_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/CCDS.genes.unique.regions.list
 target_file_X=/nfs/seqscratch11/rp2801/backup/coverage_statistics/X.list
 target_file_Y=/nfs/seqscratch11/rp2801/backup/coverage_statistics/Y.list
-transpose_awk=/nfs/rp2801/git/dragen_pipe/dragen/python/transpose.awk
+transpose_awk=/home/rp2801/git/dragen_pipe/dragen/python/transpose.awk
 
 #gatk resources
 g1000=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_phase1.indels.b37.vcf 
@@ -56,5 +53,32 @@ cnf=/nfs/goldstein/software/dragen/db.cnf
 seqdb_group=seqdb
 dragen_group=dragen
 
-
-
+[qcmetrics]
+## Database field names for the qc metrics 
+total_reads=TotalReads
+pct_reads_aligned=PCTReadsAligned
+pct_mismatch_rate=PCTMismatchRate
+capture_specificity=CaptureSpecificity
+mean_cvg=OverallCoverage
+pct_bases5X=BasesCov5X
+pct_bases10X=BasesCov10X
+pct_bases15X=BasesCov15X
+pct_bases20X=BasesCov20X
+mean_ccds_cvg=CCDSCoverage
+pct_ccds_bases5X=CCDSBasesCov5X
+pct_ccds_bases10X=CCDSBasesCov10X
+pct_ccds_bases15X=CCDSBasesCov15X
+pct_ccds_bases20X=CCDSBasesCov20X
+mean_X_cvg=XCoverage
+mean_Y_cvg=YCoverage
+perc_duplicate_reads=PCTDup
+total_snps=TotalSNVs
+pct_dbsnp_snps=
+total_indels=TotalIndels
+pct_dbsnp_indels=dbSNPOverlapIndels
+titv=TiTv
+alt_hom_X=
+num_hetX=HetX
+num_homX=HomX
+het_hom_X_ratio=HetHomXRatio
+contamination_value=ContaminationValue
