Improved functionality of updateseqdbmetrics task updated Josh's pseudo_prepid changes

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -12,7 +12,7 @@ tabix=/nfs/goldstein/software/bin/tabix
 verifybamid=/nfs/goldstein/software/bin/verifyBamID.20120620
 
 #locations
-base_dir=/nfs/fastq16/ALIGNMENT/BUILD37/DRAGEN
+base=/nfs/fastq16/ALIGNMENT/BUILD37/DRAGEN
 scratch=/nfs/qumulo/ALIGNMENT/BUILD37/DRAGEN
 python_path=/nfs/goldstein/software/python2.7.7/bin/python2.7
 
@@ -32,6 +32,7 @@ target_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/CCDS.genes.uniqu
 target_file_X=/nfs/seqscratch11/rp2801/backup/coverage_statistics/X.list
 target_file_Y=/nfs/seqscratch11/rp2801/backup/coverage_statistics/Y.list
 transpose_awk=/home/rp2801/git/dragen_pipe/dragen/python/transpose.awk
+subset_vcf_awk=/home/rp2801/git/dragen_pipe/dragen/python/subset_vcf.awk
 
 #gatk resources
 g1000=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_phase1.indels.b37.vcf 
