more changes to UpdateSeqdbMetrics, changed around parameters, will need to get 5X coverage from DepthOfCoverage since Picard does not have it for Exomes

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -73,7 +73,7 @@ mean_X_cvg=XCoverage
 mean_Y_cvg=YCoverage
 pct_duplicate_reads=PCTDup
 total_snps=TotalSNVs
-pct_dbsnp_snps=
+pct_dbsnp_snps=dbSNPOverlapSNVs
 total_indels=TotalIndels
 pct_dbsnp_indels=dbSNPOverlapIndels
 titv=TiTv
