Changed some config variables

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -27,9 +27,9 @@ relatedness_markers=/nfs/seqscratch09/RELATEDNESS_QC/test.map
 binner_loc=/home/rp2801/git/dragen_pipe/dragen/python/combined_binning.py
 snpEff_cfg=/nfs/goldstein/software/snpEff/4.1/snpEff.config
 snpEff_interval=/nfs/goldstein/goldsteinlab/software/snpEff_3_3/data/GRCh37.73/intron_exon_boundaries.unique.custom_interval.bed
-target_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/CCDS.genes.unique.regions.list
-target_file_X=/nfs/seqscratch11/rp2801/backup/coverage_statistics/X.list
-target_file_Y=/nfs/seqscratch11/rp2801/backup/coverage_statistics/Y.list
+target_file=/home/rp2801/git/dragen_pipe/dragen/python/ccds_regions.list
+target_file_X=/nfs/seqscratch11/rp2801/backup/coverage_statistics/X.intervals
+target_file_Y=/nfs/seqscratch11/rp2801/backup/coverage_statistics/Y.intervals
 transpose_awk=/home/rp2801/git/dragen_pipe/dragen/python/transpose.awk
 subset_vcf_awk=/home/rp2801/git/dragen_pipe/dragen/python/subset_vcf.awk
 
@@ -60,6 +60,8 @@ pct_reads_aligned=PCTReadsAligned
 pct_mismatch_rate=PCTMismatchRate
 capture_specificity=CaptureSpecificity
 mean_cvg=OverallCoverage
+median_cvg=MedianCoverage
+mean_median_cvg=MeanMedianCovRatio
 pct_bases5X=BasesCov5X
 pct_bases10X=BasesCov10X
 pct_bases15X=BasesCov15X
@@ -73,11 +75,11 @@ mean_X_cvg=XCoverage
 mean_Y_cvg=YCoverage
 pct_duplicate_reads=PCTDup
 total_snps=TotalSNVs
-pct_dbsnp_snps=dbSNPOverlapSNVs
+pct_dbsnp_snps=DBSNPOverlapSNVs
 total_indels=TotalIndels
-pct_dbsnp_indels=dbSNPOverlapIndels
+pct_dbsnp_indels=DBSNPOverlapIndels
 titv=TiTv
 homhet_ratio=HomHetRatio
 snv_homhet_ratio=SnvHomHetRatio
 x_homhet_ratio=XHomHetRatio
-contamination_value=ContaminationValue
+contamination_value=PercentContamination
