Made updates, update to qcTable now works

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -73,6 +73,7 @@ pct_ccds_bases15X=CCDSBasesCov15X
 pct_ccds_bases20X=CCDSBasesCov20X
 mean_X_cvg=XCoverage
 mean_Y_cvg=YCoverage
+xy_avg_ratio=XYAvgCovRatio
 pct_duplicate_reads=PCTDup
 total_snps=TotalSNVs
 pct_dbsnp_snps=DBSNPOverlapSNVs
@@ -81,5 +82,7 @@ pct_dbsnp_indels=DBSNPOverlapIndels
 titv=TiTv
 homhet_ratio=HomHetRatio
 snv_homhet_ratio=SnvHomHetRatio
+indel_homhet_ratio=IndelHomHetRatio
 x_homhet_ratio=XHomHetRatio
 contamination_value=PercentContamination
+concordance=ConcordanceWithProduction
