--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -39,7 +39,8 @@ dbSNP=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/dbsnp_138.b37.vcf
 hapmap=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/hapmap_3.3.b37.vcf 
 Mills1000g=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/Mills_and_1000G_gold_standard.indels.b37.vcf
 omni=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_omni2.5.b37.vcf 
-ref=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
+ref=/scratch/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
+#/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
 seqdict_file=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.dict
 interval=/nfs/goldstein/software/dragen_pipe/dragen/conf/hs37d5.intervals
 
