Fixed bug with incorrect use of training 1000g vcf file in VQSR

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -33,7 +33,7 @@ transpose_awk=/home/rp2801/git/dragen_pipe/dragen/python/transpose.awk
 subset_vcf_awk=/home/rp2801/git/dragen_pipe/dragen/python/subset_vcf.awk
 
 #gatk resources
-g1000=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_phase1.indels.b37.vcf 
+g1000=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_phase1.snps.high_confidence.b37.vcf 
 dbSNP=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/dbsnp_138.b37.vcf
 hapmap=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/hapmap_3.3.b37.vcf 
 Mills1000g=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/Mills_and_1000G_gold_standard.indels.b37.vcf
