Fixed bugs in VQSR task with incorrect use of truth vcf and usage of DP for Exomes, Indel and SNV homhet ratios are now based on PASS variants only

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -13,6 +13,7 @@ vcffilter=/nfs/goldstein/software/vcflib/bin/vcffilter
 
 #locations
 base=/nfs/fastq16/ALIGNMENT/BUILD37/DRAGEN
+#base=/nfs/fastq_temp/DRAGEN.Exome.1-1283
 scratch=/nfs/qumulo/ALIGNMENT/BUILD37/DRAGEN
 python_path=/nfs/goldstein/software/python2.7.7/bin/python2.7
 
