Added defaults for not tarballing luigi projects and setting the task name.

--- a/import/src/luigi.cfg
+++ b/import/src/luigi.cfg
@@ -1,3 +1,11 @@
 [ParseVCF]
 no_tarball=True
-n_cpu=1
+task_name_format={task_family}.{sample_name}.{sample_id}.chr{chromosome}
+
+[LoadGQData]
+no_tarball=True
+task_name_format={task_family}.{sample_id}.chr{chromosome}
+
+[LoadDPData]
+no_tarball=True
+task_name_format={task_family}.{sample_id}.chr{chromosome}
