--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -14,6 +14,7 @@ vcffilter=/nfs/goldstein/software/vcflib/bin/vcffilter
 #locations
 base=/nfs/fastq16/ALIGNMENT/BUILD37/DRAGEN
 #base=/nfs/fastq_temp/DRAGEN.Exome.1-1283
+base=/nfs/fastq_temp/DRAGEN.Exome.1284-2566
 scratch=/nfs/qumulo/ALIGNMENT/BUILD37/DRAGEN
 python_path=/nfs/goldstein/software/python2.7.7/bin/python2.7
 
@@ -40,6 +41,7 @@ hapmap=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/hapmap_3.3.b37.v
 Mills1000g=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/Mills_and_1000G_gold_standard.indels.b37.vcf
 omni=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_omni2.5.b37.vcf 
 ref=/scratch/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
+exac=/nfs/fastq15/EXTERNAL_DATASETS/ExAC/v0.3.1/ExAC.r0.3.1.sites.vep.vcf.gz
 #/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
 seqdict_file=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.dict
 interval=/nfs/goldstein/software/dragen_pipe/dragen/conf/hs37d5.intervals
