Changed around DupMetrics for better catching of log file, not changing permissions upon archive due to errors in some samples

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -16,8 +16,9 @@ vcffilter=/nfs/goldstein/software/vcflib/bin/vcffilter
 base=/nfs/fastq16/ALIGNMENT/BUILD37/DRAGEN
 #base=/nfs/fastq_temp/DRAGEN.Exome.1-1283
 #base=/nfs/fastq_temp/DRAGEN.Exome.1284-2566
-scratch=/nfs/qumulo/ALIGNMENT/BUILD37/DRAGEN
+#scratch=/nfs/qumulo/ALIGNMENT/BUILD37/DRAGEN
 #scratch=/nfs/fastq16/ALIGNMENT/BUILD37/DRAGEN
+scratch=/nfs/seqscratch_ssd1/ALIGNMENT/BUILD37/DRAGEN
 python_path=/nfs/goldstein/software/python2.7.7/bin/python2.7
 
 #files
@@ -91,3 +92,11 @@ indel_homhet_ratio=IndelHomHetRatio
 x_homhet_ratio=XHomHetRatio
 contamination_value=PercentContamination
 concordance=ConcordanceWithProduction
+
+[relatedness]
+## Programs
+king=/nfs/goldstein/software/king_relatedness/king
+plink=/nfs/seqscratch11/rp2801/bin_seqscratch/plink
+## Files
+masterped=/nfs/seqscratch11/rp2801/relatedness_checks/master_relatedness.ped
+relatedness_markers=/nfs/seqscratch11/rp2801/relatedness_checks/master_relatedness.map
