--- a/import/src/luigi.cfg
+++ b/import/src/luigi.cfg
@@ -9,3 +9,6 @@ task_name_format={task_family}.{sample_id}.chr{chromosome}
 [LoadDPData]
 no_tarball=True
 task_name_format={task_family}.{sample_id}.chr{chromosome}
+
+[core]
+owner-email=bc2675@cumc.columbia.edu
