Renamed anno.cnf to anno.cfg.
Also added lengths of each chromosome to config file.

--- a/import/src/anno.cfg
+++ b/import/src/anno.cfg
@@ -1,6 +1,5 @@
 [ref]
 genome=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
-CHROMs=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,X,Y,MT
 
 [db]
 cnf=/nfs/goldstein/software/dragen/db.cnf
@@ -10,3 +9,30 @@ seqdb_group=seqdb
 [pipeline]
 scratch_area=/nfs/seqscratch{seqscratch}/ANNOTATION/LOAD/DRAGEN/{sequencing_type}/{sample_name}/
 variant_id_header=##INFO<ID=VariantID,Number=A,Type=Integer,Description="The variant_id for each alternate allele">
+
+[chromosomes]
+1: 249250621
+2: 243199373
+3: 198022430
+4: 191154276
+5: 180915260
+6: 171115067
+7: 159138663
+8: 146364022
+9: 141213431
+10: 135534747
+11: 135006516
+12: 133851895
+13: 115169878
+14: 107349540
+15: 102531392
+16: 90354753
+17: 81195210
+18: 78077248
+19: 59128983
+20: 63025520
+21: 48129895
+22: 51304566
+X: 155270560
+Y: 59373566
+MT: 16569
