Fixed config variable for sending error emails.

--- a/import/src/luigi.cfg
+++ b/import/src/luigi.cfg
@@ -11,4 +11,4 @@ no_tarball=True
 task_name_format={task_family}.{sample_id}.chr{chromosome}
 
 [core]
-owner-email=bc2675@cumc.columbia.edu
+error-email=bc2675@cumc.columbia.edu
