Added timeout values for importing sample data.

--- a/import/src/anno.cfg
+++ b/import/src/anno.cfg
@@ -36,3 +36,18 @@ variant_id_header=##INFO<ID=VariantID,Number=A,Type=Integer,Description="The var
 X: 155270560
 Y: 59373566
 MT: 16569
+
+[genome]
+# 30 minutes
+load_timeout: 1800
+# 2 hours overall to load a genome
+vcf_timeout: 7200
+
+[exome]
+load_timeout: 300
+# 10 minutes overall to load a sample
+vcf_timeout: 600
+
+[custom_capture]
+load_timeout: 300
+vcf_timeout: 600
