--- a/import/src/luigi.cfg
+++ b/import/src/luigi.cfg
@@ -12,3 +12,6 @@ task_name_format={task_family}.{sample_id}.chr{chromosome}
 
 [core]
 error-email=bc2675@cumc.columbia.edu
+
+[email]
+force-send=True
