--- a/import/src/luigi.cfg
+++ b/import/src/luigi.cfg
@@ -4,11 +4,11 @@ task_name_format={task_family}.{sample_name}.{sample_id}.chr{chromosome}
 
 [LoadGQData]
 no_tarball=True
-task_name_format={task_family}.{sample_id}.chr{chromosome}
+task_name_format={task_family}.{sample_name}.{sample_id}.chr{chromosome}
 
 [LoadDPData]
 no_tarball=True
-task_name_format={task_family}.{sample_id}.chr{chromosome}
+task_name_format={task_family}.{sample_name}.{sample_id}.chr{chromosome}
 
 [core]
 error-email=bc2675@cumc.columbia.edu
