Updated GQ and DP binning scripts to reflect correct versions

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -18,7 +18,7 @@ base=/nfs/fastq16/ALIGNMENT/BUILD37/DRAGEN
 #base=/nfs/fastq_temp/DRAGEN.Exome.1284-2566
 #scratch=/nfs/qumulo/ALIGNMENT/BUILD37/DRAGEN
 #scratch=/nfs/fastq16/ALIGNMENT/BUILD37/DRAGEN
-scratch=/nfs/seqscratch_ssd2/ALIGNMENT/BUILD37/DRAGEN
+scratch=/nfs/seqscratch_ssd1/ALIGNMENT/BUILD37/DRAGEN
 python_path=/nfs/goldstein/software/python2.7.7/bin/python2.7
 
 #files
@@ -30,6 +30,8 @@ ccds_bed_file=/nfs/seqscratch11/rp2801/backup/coverage_statistics/ccds_r14.bed
 relatedness_refs=/nfs/goldstein/goldsteinlab/Bioinformatics/scripts/refs
 relatedness_markers=/nfs/seqscratch09/RELATEDNESS_QC/test.map
 binner_loc=/home/rp2801/git/dragen_pipe/dragen/python/combined_binning.py
+coverage_binner=/home/rp2801/git/dragen_pipe/dragen/python/dragen_coverage_binner.py
+gq_binner=/home/rp2801/git/dragen_pipe/dragen/python/gq_binner_updated.py
 snpEff_cfg=/nfs/goldstein/software/snpEff/4.1/snpEff.config
 target_file=/home/rp2801/git/dragen_pipe/dragen/python/ccds_regions.list
 target_file_X=/nfs/seqscratch11/rp2801/backup/coverage_statistics/X.intervals
@@ -38,12 +40,15 @@ transpose_awk=/home/rp2801/git/dragen_pipe/dragen/python/transpose.awk
 subset_vcf_awk=/home/rp2801/git/dragen_pipe/dragen/python/subset_vcf.awk
 
 #gatk resources
+contam1000g_vcf=/nfs/seqscratch11/rp2801/ethnicity_1000g/All.1kwgs.genomes.seqcap.exome.vcf.gz
 g1000=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_phase1.snps.high_confidence.b37.vcf 
 dbSNP=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/dbsnp_138.b37.vcf
+annotatedbSNP=/nfs/seqscratch11/rp2801/ethnicity_1000g/latest_dbsnp.vcf
 hapmap=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/hapmap_3.3.b37.vcf 
 Mills1000g=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/Mills_and_1000G_gold_standard.indels.b37.vcf
 omni=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_omni2.5.b37.vcf 
-ref=/scratch/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
+#ref=/scratch/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
+ref=/nfs/goldsteindata/refDB/HS_Build37/BWA_MEM_INDEX_hs37d5/hs37d5.fa
 exac=/nfs/fastq15/EXTERNAL_DATASETS/ExAC/v0.3.1/ExAC.r0.3.1.header.updated.sites.vep.vcf
 #/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
 seqdict_file=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.dict
@@ -100,3 +105,9 @@ plink=/nfs/seqscratch11/rp2801/bin_seqscratch/plink
 ## Files
 masterped=/nfs/seqscratch11/rp2801/relatedness_checks/master_relatedness.ped
 relatedness_markers=/nfs/seqscratch11/rp2801/relatedness_checks/master_relatedness.map
+
+[core]
+#error-email=rp2801@cumc.columbia.edu
+
+[email]
+#force-send=True
