--- a/import/src/logging.conf
+++ b/import/src/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root
+keys=root,luigi-interface
 
 [handlers]
 keys=consoleHandler,rotatingFileHandler
@@ -8,22 +8,27 @@ keys=consoleHandler,rotatingFileHandler
 keys=consoleFormatter,rotatingFileFormatter
 
 [logger_root]
+level=DEBUG
+handlers=consoleHandler
+
+[logger_luigi-interface]
 level=INFO
 handlers=consoleHandler,rotatingFileHandler
+qualname=luigi-interface
 
 [handler_consoleHandler]
 class=StreamHandler
 level=WARNING
 formatter=consoleFormatter
-args=(sys.stdout,)
+args=(sys.stderr,)
 
 [handler_rotatingFileHandler]
-class=RotatingFileHandler
+class=handlers.RotatingFileHandler
 level=DEBUG
 formatter=rotatingFileFormatter
-args=("/nfs/seqscratch09/dragen_import/dragen_import.txt", maxBytes=5000000, backupCount=10)
+args=("/nfs/seqscratch09/dragen_import/dragen_import.txt", "a", 5000000, 10)
 
-[formatter_fileFormatter]
+[formatter_rotatingFileFormatter]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 datefmt=
 
