Added return codes to luigi cfg.

--- a/import/src/luigi.cfg
+++ b/import/src/luigi.cfg
@@ -12,3 +12,11 @@ error-email=bc2675@cumc.columbia.edu
 
 [email]
 force-send=True
+
+[retcode]
+already_running=10
+missing_data=20
+not_run=25
+task_failed=30
+scheduling_error=35
+unhandled_exception=40
