Tasks now have sample sepecific names in qstat output

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -111,3 +111,92 @@ relatedness_markers=/nfs/seqscratch11/rp2801/relatedness_checks/master_relatedne
 
 [email]
 #force-send=True
+
+[CopyBam]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[RealignerTargetCreator]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[IndelRealigner]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[BaseRecalibrator]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[PrintReads]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[HaplotypeCaller]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[GenotypeGVCFs]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[SelectVariantsSNP]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[SelectVariantsINDEL]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[VariantRecalibratorSNP]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[VariantRecalibratorINDEL]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[ApplyRecalibrationSNP]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[ApplyRecalibrationINDEL]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[VariantFiltrationSNP]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[VariantFiltrationINDEL]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[CombineVariants]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[AnnotateVCF]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[CleanDirectory]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[ArchiveSample]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[CreateGenomeBed]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[CvgBinning]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[GQBinning]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[AlignmentMetrics]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[RunCvgMetrics]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[DuplicateMetrics]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[VariantCallingMetrics]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[GenotypeConcordance]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[ContaminationCheck]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[UpdateSeqdbMetrics]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+
