--- a/import/src/anno.cfg
+++ b/import/src/anno.cfg
@@ -51,3 +51,6 @@ vcf_timeout: 600
 [custom_capture]
 load_timeout: 300
 vcf_timeout: 600
+
+[logging]
+format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
