Changed to TimedRotatingFileHandler handler for logging luigi debug info.

--- a/import/src/logging.conf
+++ b/import/src/logging.conf
@@ -2,10 +2,10 @@
 keys=root,luigi-interface
 
 [handlers]
-keys=consoleHandler,rotatingFileHandler
+keys=consoleHandler,timedRotatingFileHandler
 
 [formatters]
-keys=consoleFormatter,rotatingFileFormatter
+keys=consoleFormatter,timedRotatingFileFormatter
 
 [logger_root]
 level=DEBUG
@@ -13,7 +13,7 @@ handlers=consoleHandler
 
 [logger_luigi-interface]
 level=INFO
-handlers=consoleHandler,rotatingFileHandler
+handlers=consoleHandler,timedRotatingFileHandler
 qualname=luigi-interface
 
 [handler_consoleHandler]
@@ -22,16 +22,14 @@ level=WARNING
 formatter=consoleFormatter
 args=(sys.stderr,)
 
-[handler_rotatingFileHandler]
-class=handlers.RotatingFileHandler
+[handler_timedRotatingFileHandler]
+class=handlers.TimedRotatingFileHandler
 level=DEBUG
-formatter=rotatingFileFormatter
-args=("/nfs/seqscratch09/dragen_import/dragen_import.txt", "a", 5000000, 10)
+formatter=timedRotatingFileFormatter
+args=("/nfs/seqscratch09/dragen_import/dragen_import.txt", "midnight", 1, 10)
 
-[formatter_rotatingFileFormatter]
+[formatter_timedRotatingFileFormatter]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
-datefmt=
 
 [formatter_consoleFormatter]
 format=%(levelname)s - %(message)s
-datefmt=
