--- a/import/src/anno.cfg
+++ b/import/src/anno.cfg
@@ -7,7 +7,7 @@ dragen_group=dragen
 seqdb_group=seqdb
 
 [pipeline]
-scratch_area=/nfs/seqscratch{seqscratch}/ANNOTATION/LOAD/DRAGEN/{sequencing_type}/{sample_name}/
+scratch_area=/nfs/seqscratch{seqscratch}/ANNOTATION/LOAD/DRAGEN/{sequencing_type}/{sample_name}.{prep_id}/
 variant_id_header=##INFO<ID=VariantID,Number=A,Type=Integer,Description="The variant_id for each alternate allele">
 
 [chromosomes]
