--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -38,12 +38,14 @@ target_file_X=/nfs/seqscratch11/rp2801/backup/coverage_statistics/X.intervals
 target_file_Y=/nfs/seqscratch11/rp2801/backup/coverage_statistics/Y.intervals
 transpose_awk=/home/rp2801/git/dragen_pipe/dragen/python/transpose.awk
 subset_vcf_awk=/home/rp2801/git/dragen_pipe/dragen/python/subset_vcf.awk
+deannotater=/home/rp2801/git/dragen_pipe/dragen/python/strip_snpeff.py
 
 #gatk resources
 contam1000g_vcf=/nfs/seqscratch11/rp2801/ethnicity_1000g/All.1kwgs.genomes.seqcap.exome.vcf.gz
 g1000=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_phase1.snps.high_confidence.b37.vcf 
 dbSNP=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/dbsnp_138.b37.vcf
-annotatedbSNP=/nfs/seqscratch11/rp2801/ethnicity_1000g/latest_dbsnp.vcf
+#annotatedbSNP=/nfs/seqscratch11/rp2801/ethnicity_1000g/latest_dbsnp.vcf
+annotatedbSNP=/nfs/seqscratch11/rp2801/ethnicity_1000g/dbsnp_fixed.vcf
 hapmap=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/hapmap_3.3.b37.vcf 
 Mills1000g=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/Mills_and_1000G_gold_standard.indels.b37.vcf
 omni=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_omni2.5.b37.vcf 
