Added login info to WalDB.

--- a/import/src/anno.cfg
+++ b/import/src/anno.cfg
@@ -3,8 +3,9 @@ genome=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
 
 [db]
 cnf=/nfs/goldstein/software/dragen/db.cnf
-dragen_group=dragen
+waldb_group=waldb
 seqdb_group=seqdb
+dragen_group=dragen
 
 [pipeline]
 scratch_area=/nfs/seqscratch{seqscratch}/ANNOTATION/LOAD/DRAGEN/{sequencing_type}/{sample_name}.{prep_id}/
