scratch area updated.

--- a/import/src/waldb.cfg
+++ b/import/src/waldb.cfg
@@ -8,7 +8,7 @@ seqdb_group=seqdb
 dragen_group=dragen
 
 [pipeline]
-scratch_area=/nfs/seqscratch{seqscratch}/ANNOTATION/LOAD/DRAGEN/{sequencing_type}/{sample_name}.{prep_id}/
+scratch_area=/nfs/seqscratch{seqscratch}/ANNOTATION/LOAD/WALDB/{sequencing_type}/{sample_name}.{prep_id}/
 variant_id_header=##INFO<ID=VariantID,Number=A,Type=Integer,Description="The variant_id for each alternate allele">
 
 [chromosomes]
