--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -14,11 +14,7 @@ verifybamid=/nfs/goldstein/software/bin/verifyBamID.20120620
 vcffilter=/nfs/goldstein/software/vcflib/bin/vcffilter
 
 #locations
-base=/nfs/fastq16/ALIGNMENT/BUILD37/DRAGEN
-#base=/nfs/fastq_temp/DRAGEN.Exome.1-1283
-#base=/nfs/fastq_temp/DRAGEN.Exome.1284-2566
-#scratch=/nfs/qumulo/ALIGNMENT/BUILD37/DRAGEN
-#scratch=/nfs/fastq16/ALIGNMENT/BUILD37/DRAGEN
+base=/nfs/fastq18/ALIGNMENT/BUILD37/DRAGEN
 scratch=/nfs/seqscratch_ssd1/ALIGNMENT/BUILD37/DRAGEN
 python_path=/nfs/goldstein/software/python2.7.7/bin/python2.7
 
@@ -40,26 +36,26 @@ target_file_Y=/nfs/seqscratch11/rp2801/backup/coverage_statistics/Y.intervals
 transpose_awk=/home/rp2801/git/dragen_pipe/dragen/python/transpose.awk
 subset_vcf_awk=/home/rp2801/git/dragen_pipe/dragen/python/subset_vcf.awk
 deannotater=/home/rp2801/git/dragen_pipe/dragen/python/strip_snpeff.py
-
+add_info_annotation=/home/rp2801/git/dragen_pipe/dragen/python/add_info_annotation.sh
 #gatk resources
 contam1000g_vcf=/nfs/seqscratch11/rp2801/ethnicity_1000g/All.1kwgs.genomes.seqcap.exome.vcf.gz
-g1000=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_phase1.snps.high_confidence.b37.vcf 
+ref=/scratch/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
+seqdict_file=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.dict
+interval=/nfs/goldstein/software/dragen_pipe/dragen/conf/hs37d5.intervals
+g1000=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_phase1.snps.high_confidence.b37.vcf
+hapmap=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/hapmap_3.3.b37.vcf
+Mills1000g=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/Mills_and_1000G_gold_standard.indels.b37.vcf
+omni=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_omni2.5.b37.vcf 
 dbSNP=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/dbsnp_138.b37.vcf
 #annotatedbSNP=/nfs/seqscratch11/rp2801/ethnicity_1000g/latest_dbsnp.vcf
 annotatedbSNP=/nfs/seqscratch11/rp2801/ethnicity_1000g/dbsnp_fixed.vcf
-hapmap=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/hapmap_3.3.b37.vcf 
-Mills1000g=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/Mills_and_1000G_gold_standard.indels.b37.vcf
-omni=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_omni2.5.b37.vcf 
-ref=/scratch/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
 exac=/nfs/fastq15/EXTERNAL_DATASETS/ExAC/v0.3.1/ExAC.r0.3.1.header.updated.sites.vep.vcf
-seqdict_file=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.dict
-interval=/nfs/goldstein/software/dragen_pipe/dragen/conf/hs37d5.intervals
 
 #variables
 create_targetfile=False
 max_mem=24
-block_size=10000
 cnv_target_padding=250
+block_size=10000
 
 [db]
 cnf=/nfs/goldstein/software/dragen/db.cnf
@@ -160,6 +156,12 @@ task_name_format={task_family}.{sample_name}.{pseudo_prepid}
 task_name_format={task_family}.{sample_name}.{pseudo_prepid}
 
 [CombineVariants]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[RBP]
+task_name_format={task_family}.{sample_name}.{pseudo_prepid}
+
+[FixMergedMNPInfo]
 task_name_format={task_family}.{sample_name}.{pseudo_prepid}
 
 [AnnotateVCF]
