--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -12,6 +12,7 @@ snpSift=/nfs/goldstein/software/snpEff/4.1/SnpSift.jar
 tabix=/nfs/goldstein/software/bin/tabix
 verifybamid=/nfs/goldstein/software/bin/verifyBamID.20120620
 vcffilter=/nfs/goldstein/software/vcflib/bin/vcffilter
+clineff=/nfs/seqscratch09/clineff/clinEff/ClinEff.jar
 
 #locations
 base=/nfs/fastq18/ALIGNMENT/BUILD37/DRAGEN
