Moved variable definitions from scripts to waldb.cfg.

--- a/import/src/waldb.cfg
+++ b/import/src/waldb.cfg
@@ -10,6 +10,8 @@ dragen_group=dragen
 [pipeline]
 scratch_area=/nfs/seqscratch{seqscratch}/ANNOTATION/LOAD/WALDB/{sequencing_type}/{sample_name}.{prep_id}/
 variant_id_header=##INFO<ID=VariantID,Number=A,Type=Integer,Description="The variant_id for each alternate allele">
+min_dp_to_include=3
+block_size=10000
 
 [chromosomes]
 1: 249250621
@@ -55,3 +57,6 @@ vcf_timeout: 600
 
 [logging]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+
+[indel_matching]
+flanking_size=1000
