Updated to latest to stable versions

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -31,6 +31,7 @@ binner_loc=/home/rp2801/git/dragen_pipe/dragen/python/combined_binning.py
 coverage_binner=/home/rp2801/git/dragen_pipe/dragen/python/dragen_coverage_binner.py
 gq_binner=/home/rp2801/git/dragen_pipe/dragen/python/gq_binner_updated.py
 snpEff_cfg=/nfs/goldstein/software/snpEff/4.1/snpEff.config
+clineff_cfg=/nfs/seqscratch09/clineff/clinEff/clinEff.config
 target_file=/home/rp2801/git/dragen_pipe/dragen/python/ccds_regions.list
 target_file_X=/nfs/seqscratch11/rp2801/backup/coverage_statistics/X.intervals
 target_file_Y=/nfs/seqscratch11/rp2801/backup/coverage_statistics/Y.intervals
