Fixed typo in group name.

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -32,7 +32,7 @@ subset_vcf_awk=/nfs/goldstein/git/dragen_pipe/dragen/python/subset_vcf.awk
 deannotater=/nfs/goldstein/git/dragen_pipe/dragen/python/strip_snpeff.py
 add_info_annotation=/nfs/goldstein/git/dragen_pipe/dragen/python/add_info_annotation.sh
 
-[gatk resources]
+[gatk_resources]
 contam1000g_vcf=/nfs/goldstein/git/dragen_pipe/dragen/python/data/All.1kwgs.genomes.seqcap.exome.vcf.gz
 ref_genome=/scratch/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
 seqdict_file=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.dict
