--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -106,3 +106,9 @@ unhandled_exception=40
 
 [worker]
 wait-interval=180
+
+[CoverageBinning]
+bin_program=/nfs/seqscratch09/dsth/BedPatch/DP1KbBins_rc1
+mmq=20
+mmb=10
+mbd=c
