Updated exac. Added coverage binning program. Updated gatk used.

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -1,7 +1,7 @@
 [programs]
 bedtools=/nfs/goldstein/software/bedtools-2.25.0/bin/bedtools
 bgzip=/nfs/goldstein/software/bin/bgzip
-gatk=/nfs/goldstein/software/GATK-3.6.0-ArchivedVersion-g89b7209/GenomeAnalysisTK.jar
+gatk=/nfs/goldstein/software/GATK-3.6.0-nightly-2016-08-27-g667f78b/GenomeAnalysisTK.jar
 gatk4=/nfs/goldstein/goldsteinlab/software/GATK-4.0-ashg/GATK4_CNV/gatk4.jar
 java=/nfs/goldstein/software/jdk1.8.0_05/bin/java
 picard=/nfs/goldstein/software/picard-tools-2.2.1/picard.jar
@@ -43,7 +43,7 @@ Mills1000g=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/Mills_and_10
 omni=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_omni2.5.b37.vcf 
 dbSNP=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/dbsnp_138.b37.vcf
 annotatedbSNP=/nfs/goldstein/git/dragen_pipe/dragen/python/data/dbsnp_fixed.vcf
-exac=/nfs/fastq15/EXTERNAL_DATASETS/ExAC/v0.3.1/ExAC.r0.3.1.header.updated.sites.vep.vcf
+exac=/nfs/fastq15/EXTERNAL_DATASETS/ExAC/v0.3.1/ExAC.r0.3.1.header.updated.sites.vep.vcf.gz
 
 [variables]
 create_targetfile=False
@@ -91,6 +91,7 @@ contamination_value=PercentContamination
 concordance=ConcordanceWithProduction
 
 [core]
+#default-scheduler-url=http://igm-atav01.igm.cumc.columbia.edu:8082
 #error-email=rp2801@cumc.columbia.edu
 
 [email]
@@ -105,7 +106,8 @@ scheduling_error=35
 unhandled_exception=40
 
 [worker]
-wait-interval=180
+wait_interval=180
+max_reschedules=0
 
 [CoverageBinning]
 bin_program=/nfs/seqscratch09/dsth/BedPatch/DP1KbBins_rc1
