Default logging.conf now sends messages to a logging server.

--- a/dragen/python/logging.conf
+++ b/dragen/python/logging.conf
@@ -23,10 +23,12 @@ formatter=consoleFormatter
 args=(sys.stderr,)
 
 [handler_timedRotatingFileHandler]
-class=handlers.TimedRotatingFileHandler
+#class=handlers.TimedRotatingFileHandler
+class=handlers.SocketHandler
 level=INFO
 formatter=timedRotatingFileFormatter
-args=("/nfs/seqscratch09/dragen_gatk/dragen_gatk.txt", "midnight", 1, 10)
+#args=("/nfs/seqscratch09/dragen_gatk/dragen_gatk.txt", "midnight", 1, 10)
+args=("localhost", handlers.DEFAULT_TCP_LOGGING_PORT)
 
 [formatter_timedRotatingFileFormatter]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
