--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -1,7 +1,8 @@
 [programs]
 bedtools=/nfs/goldstein/software/bedtools-2.25.0/bin/bedtools
 bgzip=/nfs/goldstein/software/bin/bgzip
-gatk=/nfs/goldstein/software/GATK-3.6.0-nightly-2016-08-27-g667f78b/GenomeAnalysisTK.jar
+gatk=/nfs/goldstein/software/GATK/GATK-3.6.0-ArchivedVersion-g89b7209-patched/GenomeAnalysisTK.jar
+# /nfs/goldstein/software/GATK-3.6.0-nightly-2016-08-27-g667f78b/GenomeAnalysisTK.jar
 gatk4=/nfs/goldstein/goldsteinlab/software/GATK-4.0-ashg/GATK4_CNV/gatk4.jar
 java=/nfs/goldstein/software/jdk1.8.0_05/bin/java
 picard=/nfs/goldstein/software/picard-tools-2.2.1/picard.jar
