--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -38,12 +38,12 @@ contam1000g_vcf=/nfs/goldstein/git/dragen_pipe/dragen/python/data/All.1kwgs.geno
 ref_genome=/scratch/HS_Build37/BWA_INDEX_hs37d5/hs37d5.fa
 seqdict_file=/nfs/goldsteindata/refDB/HS_Build37/BWA_INDEX_hs37d5/hs37d5.dict
 interval=/nfs/goldstein/software/dragen_pipe/dragen/conf/hs37d5.intervals
-g1000=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_phase1.snps.high_confidence.b37.vcf
-hapmap=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/hapmap_3.3.b37.vcf
-Mills1000g=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/Mills_and_1000G_gold_standard.indels.b37.vcf
-omni=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_omni2.5.b37.vcf 
-dbSNP=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/dbsnp_138.b37.vcf
-annotatedbSNP=/nfs/goldstein/git/dragen_pipe/dragen/python/data/dbsnp_fixed.vcf
+g1000=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_phase1.snps.high_confidence.b37.vcf.gz
+hapmap=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/hapmap_3.3.b37.vcf.gz
+Mills1000g=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/Mills_and_1000G_gold_standard.indels.b37.vcf.gz
+omni=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/1000G_omni2.5.b37.vcf.gz
+dbSNP=/nfs/goldstein/goldsteinlab/software/GATK_bundle_2.8_b37/dbsnp_138.b37.vcf.gz
+annotatedbSNP=/nfs/goldstein/git/dragen_pipe/dragen/python/data/dbsnp_fixed.vcf.gz
 exac=/nfs/fastq15/EXTERNAL_DATASETS/ExAC/v0.3.1/ExAC.r0.3.1.header.updated.sites.vep.vcf.gz
 
 [variables]
@@ -58,7 +58,7 @@ seqdb_group=seqdb
 dragen_group=dragen
 
 [qc_metrics]
-## Database field names for the qc metrics 
+## Database field names for the qc metrics
 total_reads=TotalReads
 pct_reads_aligned=PCTReadsAligned
 pct_mismatch_rate=PCTMismatchRate
