Disabled task rescheduling.

--- a/dragen/python/luigi.cfg
+++ b/dragen/python/luigi.cfg
@@ -92,6 +92,7 @@ contamination_value=PercentContamination
 concordance=ConcordanceWithProduction
 
 [core]
+max_reschedules=0
 #default-scheduler-url=http://igm-atav01.igm.cumc.columbia.edu:8082
 #error-email=rp2801@cumc.columbia.edu
 
